Create DatePPicker and HourPicker functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,9 @@
         "no-console": [
             "off"
         ]
-    }
+    },
+    "globals": {
+        "flatpickr": "readonly",
+        "rangeSlider": "readonly"
+      }
 }
